[gd_scene load_steps=4 format=3 uid="uid://re5xdy4ee7at"]

[ext_resource type="Script" path="res://scenes/autoloads/ui.gd" id="1_02b58"]
[ext_resource type="PackedScene" uid="uid://mjyf4nnwhbja" path="res://scenes/autoloads/item_icon.tscn" id="2_tino5"]
[ext_resource type="Script" path="res://scenes/autoloads/dialogue.gd" id="3_u3ei8"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_02b58")
ItemIcon = ExtResource("2_tino5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Right" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="Toggle" type="Button" parent="Control/Right"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
text = ">"

[node name="Inventory" type="PanelContainer" parent="Control/Right"]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Control/Right/Inventory"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Control/Right/Inventory/Scroll"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopLeft" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 31.0

[node name="Settings" type="Button" parent="Control/TopLeft"]
layout_mode = 2
focus_mode = 0
text = "Settings"

[node name="SaveLoad" type="Button" parent="Control/TopLeft"]
layout_mode = 2
focus_mode = 0
text = "Save / Load"

[node name="Dialogue" type="Window" parent="Control"]
transparent_bg = true
position = Vector2i(0, 520)
size = Vector2i(1152, 128)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
borderless = true
transparent = true
script = ExtResource("3_u3ei8")

[node name="PanelContainer" type="PanelContainer" parent="Control/Dialogue"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="Control/Dialogue/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Portrait" type="TextureRect" parent="Control/Dialogue/PanelContainer/HBox"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="VBox" type="VBoxContainer" parent="Control/Dialogue/PanelContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Title" type="RichTextLabel" parent="Control/Dialogue/PanelContainer/HBox/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="Speech" type="RichTextLabel" parent="Control/Dialogue/PanelContainer/HBox/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true

[node name="SpeechTimer" type="Timer" parent="Control/Dialogue/PanelContainer/HBox/VBox/Speech"]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="Control/Right/Toggle" to="." method="_on_toggle_pressed"]
[connection signal="pressed" from="Control/TopLeft/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/TopLeft/SaveLoad" to="." method="_on_save_load_pressed"]
[connection signal="jump" from="Control/Dialogue" to="." method="jump_dialogue"]
[connection signal="timeout" from="Control/Dialogue/PanelContainer/HBox/VBox/Speech/SpeechTimer" to="." method="_on_speech_timer_timeout"]
